# frappe_ai

./: .gitignore  .pre-commit-config.yaml  APP_STRUCTURE.md  CONTRIBUTING.md  INSTALLATION.md  MANIFEST.in  Makefile  QUICKSTART.md  README copy.md  README.md  license.txt  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  setup.py  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-09-frappe-native-refactor.md
frappe_ai/: hooks.py  install.py  modules.txt  oauth_setup.py  patches.txt  search.py  setup.py  test_install.py
frappe_ai/ai_assistant/doctype/: __init__.py
frappe_ai/ai_assistant/doctype/ai_assistant_settings/: ai_assistant_settings.js  ai_assistant_settings.json  ai_assistant_settings.py  test_ai_assistant_settings.py
frappe_ai/ai_assistant/doctype/ai_chat_message/: ai_chat_message.json  ai_chat_message.py  test_ai_chat_message.py
frappe_ai/ai_assistant/doctype/ai_chat_session/: ai_chat_session.json  ai_chat_session.py  test_ai_chat_session.py
frappe_ai/ai_assistant/doctype/mcp_server_settings/: __init__.py  mcp_server_settings.js  mcp_server_settings.json  mcp_server_settings.py  test_mcp_server_settings.py
frappe_ai/api/: __init__.py  ai_query.py  chat.py  health.py  realtime.py  test_chat.py  test_health.py  test_init.py
frappe_ai/config/: desktop.py  docs.py
frappe_ai/patches/: rename_mcp_server_settings.py  rename_mcp_server_url_to_agent_url.py
frappe_ai/public/css/: frappe_ai.css  frappe_ai_sidebar.bundle.css  frappe_ai_sidebar.css
frappe_ai/public/js/: frappe_ai.bundle.js  frappe_ai.bundle.ts
frappe_ai/www/: __init__.py  ai-chat.html  ai-chat.py
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
frontend/scripts/: update-hooks.js
frontend/src/: App.vue  main.ts
frontend/src/components/: ChatHeader.vue  ChatInput.vue  ChatMessages.vue  ChatSidebar.vue  MessageBubble.vue  ToolCallCard.vue
frontend/src/composables/: useChat.ts  useSettings.ts
frontend/src/types/: frappe-globals.d.ts  index.ts  messages.ts
frontend/src/utils/: context.ts  formatters.ts  markdown.ts
tests/e2e/: fixtures.ts  settings.spec.ts  sidebar.spec.ts
(+58 files in other folders)
